@@ -341,6 +341,9 @@
       \item \code{mget()} now has a default for \code{envir} (the frame
       from which it is called), for consistency with \code{get()} and
       \code{assign()}.
+      
+      \item \code{close()} now return a status where available,
+      invisibly. (Wish of \PR{15088}.)
     }
   }
 
